--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,10 @@
 @import './sectionPassos.css';
 @import './sectionDuvidas.css';
 @import './sectionDepoimentos.css';
+@import './sectionPraquem.css';
+@import './sectionSobre.css';
+@import './sectionCta.css';
+@import './author.css';
 
 @import './button.css';
 @import './head.css';
