--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
 @import './sectionDepoimentos.css';
 @import './sectionPraquem.css';
 @import './sectionSobre.css';
+@import './sectionEstrutura.css';
 @import './sectionCta.css';
 @import './author.css';
 
