--- a/css/sectionDepoimentos.css
+++ b/css/sectionDepoimentos.css
@@ -19,6 +19,10 @@
     margin-bottom: 1rem;
 }
 
+#depoimentos header.dois {
+    margin-top: 6rem;
+}
+
 #depoimentos header h2 {
     margin-bottom: 1rem;
     font-size: 3.2rem;
