--- a/css/sectionPraquem.css
+++ b/css/sectionPraquem.css
@@ -99,4 +99,16 @@
     section#praquem a button {
         margin-top: 2rem;
     }
+
+    section#praquem .card {
+        padding: 4rem;
+    }
+
+    section#praquem .card p {
+        font-size: 1.4rem;
+    }
+
+    section#praquem .card:nth-child(4) p {
+        font-size: 1.2rem;
+    }
 }
